--- a/global.css
+++ b/global.css
@@ -1,5 +1,6 @@
 *{
-    --primary_color: #FFE1A8;
+    /* --primary_color: #FFE1A8; */
+    --primary_color: #ffc350;
     --second_color: #E26D5C;
     --ter_color: #C9CBA3;
 
@@ -9,4 +10,5 @@
 
 html{
     font-family: 'Open Sans', sans-serif;
+    background-image: url(./src/assets/background_low.png); 
 }
