--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,11 +1,12 @@
 @import url(../../global.css);
 
 #footerPage{
-    background-color: var(--ter_color);
+    background-color: var(--primary_color);
     padding: 20px;
     margin-top: 40px;
     color: black;
     text-align: center;
+    border-top: 1px solid #00c2ff;
 }
 
 #footerPage .redes{
@@ -13,6 +14,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+#footerPage .redes a p{
+    color: black;
+    font-weight: bold;
 }
 
 #footerPage .redes img{
